--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-fileuploader": "^0.0.7",
     "jest": "^29.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^8.11.5",
